2011-12-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h,
	* sdas/linksrc/aslink.vcxproj,
	* sdas/linksrc/aslink.vcxproj.filters,
	* sdas/linksrc/lkar.c,
	* sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkbank.c,
	* sdas/linksrc/lkdata.c,
	* sdas/linksrc/lkhead.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lkmain.c,
	* sdas/linksrc/lkmem.c,
	* sdas/linksrc/lknoice.c,
	* sdas/linksrc/lkout.c,
	* sdas/linksrc/lkrloc.c,
	* sdas/linksrc/lkrloc3.c,
	* sdas/linksrc/lks19.c,
	* sdas/linksrc/lksdcclib.c,
	* sdas/linksrc/lksdcdb.c,
	* sdas/linksrc/lksym.c,
	* sdas/linksrc/Makefile.in: next step towards ASxxxx v5
	* src/SDCCmem.c (allocIntoSeg): MSVC 2010 still needs all declarations at
	  the start of a block in C mode
	* src/z80/gen.c (genPointerSet): fixed warning
	* src/SDCCast.c (processParms): removed incorrect function pointer check
	* support/regression/tests/bug3440327.c: reenabled test for mcs51

2011-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3444293.c
	  Fix warning in regression test.

2011-12-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCcse.c,
	  src/SDCCicode.h:
	  Rename IS_ASSOCIATIVE to IS_COMMUTATIVE.

2011-12-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Minor improvements in pointer handling for the z80 backends.

2011-12-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClabel.c:
	  Disable hidden jump-to-jump optimization for mcs51, since it breaks large and huge.

2011-11-30 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3440327.c:
	  Disable bug 3440327 test on mcs51.

2011-11-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Cleanup leftover warning.

2011-11-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,